# Road4AI

./: .env.example  .gitignore  AGENTS.local.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTENT_PLAN_APRIL.md  CONTRIBUTING.md  COS_README.md  COS_REPORT.md  CURRENT_EXERCISE_STATE.md  DESIGN.md  DESIGN_SPEC.md  DISPATCH.md  DRIFT_MONITORING_SPEC.md  ECOSYSTEM_SHIFT.md  GEMINI.md  HELLO.md  LIMITATIONS.md  MAY_ROADMAP.md  QWEN.md  README.md  REVEAL_SCRIPT.md  SKILLOPT_VALIDATION_REPORT.md  STRATEGY.md  SYSTEM.md  TOKEN_ANXIETY_LOG.md  V2.1_ROADMAP_UPDATE.md  WORKING-CONTEXT.md  ask  automate_content.py  blog-skillopt-validation.html  blotato.md  com.road4ai.content.plist  daily-plan.md  deep-dive-mcp.md  deep-dive-rag.md  deep-dive-workflows.md  feedback-loop.md  ideas.md  (+13 more)
.agents/: product-marketing-context.md
.antigravitycli/: c09c6fef-a6bd-45a2-a0cf-d9413bfaa646.json
.claude-flow/: config.json
.github/: README.md
.gitnexus/: meta.json
.obsidian/: app.json  core-plugins.json
.swarm/: hnsw.metadata.json  memory.db-shm  memory.db-wal  model-router-state.json  schema.sql
chroma_db/: chroma.sqlite3
chroma_db.bak/: chroma.sqlite3
config/: blotato-accounts.json  com.road4ai.drift-monitor.plist  com.road4ai.mimo-server.plist  harvester_feeds.json  (+4 more)
road4ai-hermes/: CHANGELOG.md  README.md  pyproject.toml
road4ai-hermes/src/road4ai_hermes/: adapter.py  bridge.py  crewai.py  example_adapter.py
road4ai-hermes/tests/: test_bridge_v2.py  test_conflicts.py  test_crewai_storage.py  test_memory_persistence.py  test_record_and_llm_adapter.py  test_relevance_signal.py
(+445 files in other folders)
