[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "road4ai-hermes"
version = "0.1.0"
description = "The high-performance, distributed memory substrate for agent swarms."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Shagwu", email = "sharon.agwu@gmail.com" }
]
keywords = ["ai", "agents", "memory", "rag", "chromadb", "distributed"]
dependencies = [
    "chromadb>=0.4.0",
    "numpy",
    "pydantic",
]

[project.optional-dependencies]
local = ["sentence-transformers>=2.2.0"]
test = ["pytest>=7.0.0", "pytest-mock"]

[project.urls]
Homepage = "https://github.com/Shagwu/Road4AI"

[tool.hatch.build.targets.wheel]
packages = ["src/road4ai_hermes"]
